--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.16.4"
   },
   "devDependencies": {
